-----2.12.0 (XX) -----
New features:
	* [general]
		* Detail info view mode in the Color Maps Browser
		* Add links and button to copy configuration and show external libraries in the About Dialog
	* [import]
		* Download datasets from kaggle.com
		* Support MCAP file import
		* show error messages for the serial port in when creating a live data source to notify directly about missing device permissions, etc.
		* add warning when importing projects in file import dialog
		* improve error messages for data import
		* fix preview of data with header
		* Ask how to treat multilayer graphs when opening OPJ project
		* Improve error message handling
		* Improve livedata import
		* Add possibility to specify custom column datatypes (mandatory for livedata)
		* Notify about the unsupported UTF16 encoding (BUG 496215)
		* Make counting number of lines in ASCII files faster on Windows
	* [analysis]
		* Add possibility to do calculations on curves
		* Automatically recalculate analysis curves on data change
	* [spreadsheet]
		* support periodic and random sampling as function: psample(n;x), rsample(x)
		* save the properties used to generate random values in the column for later re-use
		* allow to perform the distribution fit to the data directly from the spreadsheet
	* [worksheet] 
		* new visualization types:
			* Process Behavior Chart
			* Run Chart
		* more space for plots and less "ink" - no layout spacings, no minor grid lines, not plot borders, no ticks on secondary axes on default
		* allow to provide names for plot ranges for easier lookup and assignemnt in the plot elements
		* new option to use plot's main color (line, symbol, etc.) for the color of the name text shown in the legend
		* fix inverse axis scale for Arrhenius plots

Performance improvements:
	* Made big spreadsheet (millions of cells) more responsive when selecting columns via the spreadsheet header

Bug fixes:
	* Fix crash selecting "cell" from function list in function dialog