@@ -3,6 +3,7 @@ New features:
 	* [general]
 		* Detail info view mode in the Color Maps Browser
 		* Add links and button to copy configuration and show external libraries in the About Dialog
+		* Make the changes in Note undo/redo-able
 	* [import]
 		* Download datasets from kaggle.com
 		* Support MCAP file import
@@ -42,6 +43,7 @@ Bug fixes:
 	* Fix add/subtract value functionality in Matrix (BUG 493523)
 	* Fix wrong font size in the plot legend (BUG 493017) and in the axis title (BUG 472982)
 	* Don't overwrite OPJ files when saving (BUG 496480)
+	* Fixed the text cursor jumping to the beginning of the line when typing in text in the note (BUG 497029)
 
 Internal:
 	* use name LabPlot/labplot consistenly (renamed LabPlot2/labplot2)
